# ensembl-web-track-api

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  NOTICE  README.md  db.sqlite3  docker-compose.yaml  ensembl-track-api.openapi.yaml  import_data.py  manage.py  meeting.md  pull_request_template.md  pyproject.toml  requirements.txt
data/: test_genomic.csv  test_input.csv  test_input.json  test_regulation.csv  test_variation.json  track_categories.json  track_categories.yaml
ensembl_track_api/: asgi.py  settings.py  urls.py  wsgi.py
k8s/: configmap.yaml  db_service.yaml  db_service_hh.yaml  db_service_hx.yaml  deployment.yaml  deployment_dev.yaml  ensembl_track_api_deployment.yaml  ensembl_track_api_service.yaml  ingress.yaml  ingress_dev.yaml  ingress_int.yaml  ingress_prod.yaml  ingress_stage.yaml  service.yaml
templates/: beta2-gene-desc.csv  beta2-variant-desc.csv  compara-elements.yaml  compara-scores.yaml  contigs-gene-other-fwd.yaml  contigs-gene-other-rev.yaml  contigs-gene-pc-fwd.yaml  contigs-gene-pc-rev.yaml  contigs.yaml  cpg.json  gc.yaml  gene-track-desc-mvp.csv  gene-track-desc.csv  gerp-elements.yaml  gerp-scores.yaml  reference.yaml  regulation.yaml  regulatory-features.yaml  repeat-elements.yaml  repeats.centromere_repeat.yaml  repeats.dust.yaml  repeats.ena_repeat.yaml  repeats.json  repeats.long_terminal_repeat.yaml  repeats.low_complexity_region.yaml  repeats.ltr_retrotransposon.yaml  repeats.regional_centromere_inner_repeat_region.yaml  repeats.repeatdetector.yaml  repeats.repeatdetector_annotated.yaml  repeats.repeatmask.yaml  (+28 more)
(+35 files in other folders)
